--- a/src/Bootstrap/res/PathwayBootstrap.ini
+++ b/src/Bootstrap/res/PathwayBootstrap.ini
@@ -15,7 +15,7 @@
 ;along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ;
 [Versions]
-Java=9
+Java=8u144
 ;LibreOffice=3.6.5,7A3D261E340E433074424681EDB8668C
 LibreOffice=5.3.6
 Prince=11.3-win32
