--- a/src/CssSimpler/CssSimpler.csproj
+++ b/src/CssSimpler/CssSimpler.csproj
@@ -250,7 +250,9 @@
     <Compile Include="MoveInlineStyles.cs" />
     <Compile Include="ProcessPseudo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
