--- a/src/GoBibleConvert/GoBibleConvert.csproj
+++ b/src/GoBibleConvert/GoBibleConvert.csproj
@@ -242,7 +242,9 @@
   <ItemGroup>
     <Compile Include="ExportGoBible.cs" />
     <Compile Include="PartialBooks.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
