--- a/src/PathwayB/PathwayB.csproj
+++ b/src/PathwayB/PathwayB.csproj
@@ -234,7 +234,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PathwayB.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
