--- a/src/TestBed/TestBed.csproj
+++ b/src/TestBed/TestBed.csproj
@@ -261,7 +261,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ANTLR.resx">
       <DependentUpon>ANTLR.cs</DependentUpon>
