--- a/src/theWordConvert/TheWordConvert.csproj
+++ b/src/theWordConvert/TheWordConvert.csproj
@@ -251,7 +251,9 @@
   <ItemGroup>
     <Compile Include="ExportTheWord.cs" />
     <Compile Include="MySwordSqlite.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
