--- a/src/CssParser/CssParser.csproj
+++ b/src/CssParser/CssParser.csproj
@@ -256,7 +256,9 @@
     </Compile>
     <Compile Include="CssTreeParser.cs" />
     <Compile Include="MakeProperty.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StyleAttribute.cs" />
   </ItemGroup>
