--- a/src/Html5Convert/Html5Convert.csproj
+++ b/src/Html5Convert/Html5Convert.csproj
@@ -217,7 +217,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExportHtml5.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
