--- a/src/PsTool/packages.config
+++ b/src/PsTool/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Analytics" version="2.0.3" targetFramework="net40" />
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
