--- a/src/SwordConvert/SwordConvert.csproj
+++ b/src/SwordConvert/SwordConvert.csproj
@@ -240,7 +240,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExportSword.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsxToOSIS.cs" />
   </ItemGroup>
