--- a/src/XeLaTexConvert/XeLaTexConvert.csproj
+++ b/src/XeLaTexConvert/XeLaTexConvert.csproj
@@ -238,7 +238,9 @@
   <ItemGroup>
     <Compile Include="ExportXeLaTexConvert.cs" />
     <Compile Include="ModifyXeLaTexStyles.cs" />
-    <Compile Include="..\..\GlobalAssemblyInfo.cs" />
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XeLaTexContent.cs" />
     <Compile Include="XelatexFontMapping.cs" />
@@ -277,7 +279,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
